--- a/paginas web completas/asset/index.html
+++ b/paginas web completas/asset/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Manjar Bakery</title>
+    <title>Manjar Bakery 2</title>
     <link rel="stylesheet" href="/css/stylemanjar.css" />
     <link
       rel="shortcut icon"
